--- a/index.html
+++ b/index.html
@@ -221,8 +221,8 @@
               <!-- <li> OVO FRITO </li> -->
               <!-- <li> PATÊ </li> -->
               <!-- <li> PUPUNHA </li> -->
-              <li> QUARENTÃO </li>
-              <!-- <li> QUEIJO E PRESUNTO </li> -->
+              <!-- <li> QUARENTÃO </li> -->
+              <li> QUEIJO E PRESUNTO </li>
               <!-- <li> SOPA DE FEIJÃO </li> -->
               <!-- <li> TAPIOCA COM QUEIJO </li> -->
             </ul>
@@ -233,7 +233,7 @@
               <!-- <li> ALMOÇO ESPECIAL </li> -->
               <!-- <li> BIFE ACEBOLADO </li> -->
               <!-- <li> BIFE AO MOLHO </li> -->
-              <li> BISTECA SUÍNA </li>
+              <!-- <li> BISTECA SUÍNA </li> -->
               <!-- <li> CARNE AO MOLHO </li> -->
               <!-- <li> CALABRESA E OVO </li> -->
               <!-- <li> DOBRADINHA </li> -->
@@ -248,7 +248,8 @@
               <!-- <li> FRANGO GUISADO </li> -->
               <!-- <li> GUISADO DE CARNE </li> -->
               <!-- <li> ISCA DE CALABRESA </li> -->
-              <li> ISCA DE CARNE </li>
+              <!-- <li> ISCA DE CARNE </li> -->
+              <li> ISCA MISTA </li>
               <!-- <li> ISCA DE FIGADO </li> -->
               <!-- <li> ISCA DE FRANGO </li> -->
               <!-- <li> LASANHA DE CARNE </li> -->
@@ -258,7 +259,7 @@
               <!-- <li> PEIXE FRITO </li> -->
               <!-- <li> PICADINHO RICO </li> -->
               <!-- <li> REFRIGERANTE </li> -->
-              <!-- <li> TAMBAQUI FRITO </li> -->
+              <li> TAMBAQUI FRITO </li>
 
               <!-- <li> MACARRONADA </li> -->
 
@@ -272,7 +273,7 @@
               <!-- <li> BAQUETE </li> -->
               <!-- <li> BISCOITO </li> -->
               <!-- <li> BISCOITO RECHEADO </li> -->
-              <li> BOLACHA / IOGURTE </li>
+              <!-- <li> BOLACHA / IOGURTE </li> -->
               <!-- <li> BOLO </li> -->
               <!-- <li> FAROFA DE CHARQUE </li> -->
               <!-- <li> KIKÃO </li> -->
@@ -282,6 +283,7 @@
               <!-- <li> PIT STOP / IOGURTE </li> -->
               <!-- <li> SALGADO </li> -->
               <!-- <li> X SALADA </li> -->
+              <li>SALADA FRUTA</li>
             </ul>
             </p>
           </div>
@@ -301,12 +303,12 @@
               <li> PÃO FRANCÊS </li>
               <li> PÃO MASSA FINA </li>
               <li> CAFÉ / LEITE </li>
-              <!-- <li> BANANA COZIDA </li> -->
+              <li> BANANA COZIDA </li>
               <!-- <li> BOLO </li> -->
               <!-- <li> FRUTA </li> -->
               <!-- <li> MOLHO DE SALSICHA </li> -->
               <!-- <li> OVO COZIDO </li> -->
-              <li> OVO FRITO </li>
+              <!-- <li> OVO FRITO </li> -->
               <!-- <li> PATÊ </li> -->
               <!-- <li> PUPUNHA </li> -->
               <!-- <li> QUARENTÃO </li> -->
@@ -321,19 +323,20 @@
             <P class="desjejum">ALMOÇO:</P>
             <ul>
               <!-- <li> ALMOÇO ESPECIAL </li> -->
+              <li> ALMONDEGAS AO MOLHO </li>
               <!-- <li> BIFE ACEBOLADO </li> -->
               <!-- <li> BIFE AO MOLHO </li> -->
               <!-- <li> CARNE AO MOLHO </li> -->
               <!-- <li> CALABRESA E OVO </li> -->
-              <li> DOBRADINHA </li>
+              <!-- <li> DOBRADINHA </li> -->
               <!-- <li> ESCONDIDINHO DE FRIOS </li> -->
               <!-- <li> FAROFA DE CONSERVA </li> -->
               <!-- <li> FEIJOADA </li> -->
               <!-- <li> FILE DE FRANGO FRITO </li> -->
               <!-- <li> FRANGO A MILANESA </li> -->
-              <li> FRANGO ASSADO </li>
+              <!-- <li> FRANGO ASSADO </li> -->
               <!-- <li> FRANGO DESFIADO </li> -->
-              <!-- <li> FRANGO FRITO </li> -->
+              <li> FRANGO FRITO </li>
               <!-- <li> FRANGO GUISADO </li> -->
               <!-- <li> GUISADO DE CARNE </li> -->
               <!-- <li> ISCA DE CALABRESA </li> -->
@@ -365,8 +368,8 @@
               <!-- <li> BOLO </li> -->
               <!-- <li> FAROFA DE CHARQUE </li> -->
               <!-- <li> KIKÃO </li> -->
-              <!-- <li> MISTO QUENTE </li> -->
-              <li> MINGAU DE MILHO </li>
+              <li> MISTO QUENTE </li>
+              <!-- <li> MINGAU DE MILHO </li> -->
               <!-- <li> PÃO COM OVO E QUEIJO </li> -->
               <!-- <li> PASTEL </li> -->
               <!-- <li> PIT STOP / IOGURTE </li> -->
@@ -392,7 +395,7 @@
               <li> PÃO MASSA FINA </li>
               <li> CAFÉ / LEITE </li>
               <!-- <li> BANANA COZIDA </li> -->
-              <!-- <li> BOLO </li> -->
+              <li> BOLO </li>
               <!-- <li> FRUTA </li> -->
               <!-- <li> FAROFA DE CHARQUE </li> -->
               <!-- <li> MOLHO DE SALSICHA </li> -->
@@ -403,96 +406,10 @@
               <!-- <li> QUARENTÃO </li> -->
               <!-- <li> QUEIJO E PRESUNTO </li> -->
               <!-- <li> SOPA DE FEIJÃO </li> -->
-              <li> TAPIOCA COM QUEIJO </li>
-
-              <!-- <li> FAROFA DE CONSERVA </li> -->
-
-            </ul>
-            </p></br>
-            <p>
-            <P class="desjejum">ALMOÇO:</P>
-            <ul>
-              <!-- <li> ALMOÇO ESPECIAL </li> -->
-              <!-- <li> BIFE ACEBOLADO </li> -->
-              <!-- <li> BIFE AO MOLHO </li> -->
-              <li> CARNE AO MOLHO </li>
-              <!-- <li> CALABRESA E OVO </li> -->
-              <!-- <li> DOBRADINHA </li> -->
-              <!-- <li> ESCONDIDINHO DE FRIOS </li> -->
-              <!-- <li> FAROFA DE CONSERVA </li> -->
-              <!-- <li> FEIJOADA </li> -->
-              <!-- <li> FILE DE FRANGO FRITO </li> -->
-              <!-- <li> FRANGO A MILANESA </li> -->
-              <!-- <li> FRANGO ASSADO </li> -->
-              <!-- <li> FRANGO DESFIADO </li> -->
-              <!-- <li> FRANGO FRITO </li> -->
-              <!-- <li> FRANGO GUISADO </li> -->
-              <!-- <li> GUISADO DE CARNE </li> -->
-              <!-- <li> ISCA DE CALABRESA </li> -->
-              <!-- <li> ISCA DE CARNE </li> -->
-              <!-- <li> ISCA DE FIGADO </li> -->
-              <!-- <li> ISCA DE FRANGO </li> -->
-              <li> LASANHA DE CARNE </li>
-              <!-- <li> LINGUIÇA DE FRANGO </li> -->
-              <!-- <li> OVO FRITO </li> -->
-              <!-- <li> PANQUECAS DE CARNE </li> -->
-              <!-- <li> PEIXE FRITO </li> -->
-              <!-- <li> PICADINHO RICO </li> -->
-              <!-- <li> REFRIGERANTE </li> -->
-              <!-- <li> TAMBAQUI FRITO </li> -->
-
-              <li> REFRIGERANTE </li>
-              <!-- <li> SUCO </li> -->
-            </ul>
-            <p></br>
-            <p>
-            <P class="desjejum">LANCHE:</P>
-            <ul>
-              <!-- <li> BAQUETE </li> -->
-              <!-- <li> BISCOITO </li> -->
-              <!-- <li> BISCOITO RECHEADO </li> -->
-              <!-- <li> BOLACHA / IOGURTE </li> -->
-              <!-- <li> BOLO </li> -->
-              <!-- <li> FAROFA DE CHARQUE </li> -->
-              <!-- <li> KIKÃO </li> -->
-              <!-- <li> MISTO QUENTE </li> -->
-              <!-- <li> PÃO COM OVO E QUEIJO </li> -->
-              <!-- <li> PASTEL </li> -->
-              <!-- <li> PIT STOP / IOGURTE </li> -->
-              <li> SALGADO </li>
-              <!-- <li> X SALADA </li> -->
-            </ul>
-            </p>
-          </div>
-
-          <div class="card">
-            <a class="Proficional_Academico" target="_blank" href="#services">
-              <img width="280" height="28" src="./assets/sabado.png" alt="PROLAM" />
-            </a>
-            <h3>
-              <a class="Proficional_Academico" target="_blank" href="#services">
-                04/02
-              </a>
-            </h3>
-            <p>
-            <P class="desjejum">DESJEJUM:</P>
-            <ul>
-              <li> PÃO FRANCÊS </li>
-              <li> PÃO MASSA FINA </li>
-              <li> CAFÉ / LEITE </li>
-              <!-- <li> BANANA COZIDA </li> -->
-              <!-- <li> BOLO </li> -->
-              <!-- <li> FRUTA </li> -->
-              <!-- <li> MOLHO DE SALSICHA </li> -->
-              <!-- <li> OVO COZIDO </li> -->
-              <!-- <li> OVO FRITO </li> -->
-              <!-- <li> PATÊ </li> -->
-              <!-- <li> PUPUNHA </li> -->
-              <!-- <li> QUARENTÃO </li> -->
-              <!-- <li> QUEIJO E PRESUNTO </li> -->
-              <!-- <li> SOPA DE FEIJÃO </li> -->
-              <li> SALSICHA AO MOLHO </li>
               <!-- <li> TAPIOCA COM QUEIJO </li> -->
+
+              <!-- <li> FAROFA DE CONSERVA </li> -->
+
             </ul>
             </p></br>
             <p>
@@ -523,8 +440,96 @@
               <!-- <li> OVO FRITO </li> -->
               <!-- <li> PANQUECAS DE CARNE </li> -->
               <!-- <li> PEIXE FRITO </li> -->
-              <li> PICADINHO RICO </li>
-              <li> PEITO DE FRANCO </li>
+              <!-- <li> PICADINHO RICO </li> -->
+              <!-- <li> REFRIGERANTE </li> -->
+              <li> YAKISOBA </li>
+              <!-- <li> TAMBAQUI FRITO </li> -->
+
+              <li> REFRIGERANTE </li>
+              <!-- <li> SUCO </li> -->
+            </ul>
+            <p></br>
+            <p>
+            <P class="desjejum">LANCHE:</P>
+            <ul>
+              <!-- <li> BAQUETE </li> -->
+              <!-- <li> BISCOITO </li> -->
+              <!-- <li> BISCOITO RECHEADO </li> -->
+              <!-- <li> BOLACHA / IOGURTE </li> -->
+              <li> BOLO </li>
+              <!-- <li> FAROFA DE CHARQUE </li> -->
+              <!-- <li> KIKÃO </li> -->
+              <!-- <li> MISTO QUENTE </li> -->
+              <!-- <li> PÃO COM OVO E QUEIJO </li> -->
+              <!-- <li> PASTEL </li> -->
+              <!-- <li> PIT STOP / IOGURTE </li> -->
+              <!-- <li> SALGADO </li> -->
+              <!-- <li> X SALADA </li> -->
+            </ul>
+            </p>
+          </div>
+
+          <div class="card">
+            <a class="Proficional_Academico" target="_blank" href="#services">
+              <img width="280" height="28" src="./assets/sabado.png" alt="PROLAM" />
+            </a>
+            <h3>
+              <a class="Proficional_Academico" target="_blank" href="#services">
+                04/02
+              </a>
+            </h3>
+            <p>
+            <P class="desjejum">DESJEJUM:</P>
+            <ul>
+              <li> PÃO FRANCÊS </li>
+              <li> PÃO MASSA FINA </li>
+              <li> CAFÉ / LEITE </li>
+              <!-- <li> BANANA COZIDA </li> -->
+              <!-- <li> BOLO </li> -->
+              <!-- <li> FRUTA </li> -->
+              <!-- <li> MOLHO DE SALSICHA </li> -->
+              <li> OVO  </li>
+              <!-- <li> OVO COZIDO </li> -->
+              <!-- <li> OVO FRITO </li> -->
+              <!-- <li> PATÊ </li> -->
+              <!-- <li> PUPUNHA </li> -->
+              <!-- <li> QUARENTÃO </li> -->
+              <!-- <li> QUEIJO E PRESUNTO </li> -->
+              <!-- <li> SOPA DE FEIJÃO </li> -->
+              <!-- <li> SALSICHA AO MOLHO </li> -->
+              <!-- <li> TAPIOCA COM QUEIJO </li> -->
+            </ul>
+            </p></br>
+            <p>
+            <P class="desjejum">ALMOÇO:</P>
+            <ul>
+              <!-- <li> ALMOÇO ESPECIAL </li> -->
+              <!-- <li> BIFE ACEBOLADO </li> -->
+              <!-- <li> BIFE AO MOLHO </li> -->
+              <li> CARNE AO MOLHO </li>
+              <!-- <li> CALABRESA E OVO </li> -->
+              <!-- <li> DOBRADINHA </li> -->
+              <!-- <li> ESCONDIDINHO DE FRIOS </li> -->
+              <!-- <li> FAROFA DE CONSERVA </li> -->
+              <!-- <li> FEIJOADA </li> -->
+              <!-- <li> FILE DE FRANGO FRITO </li> -->
+              <!-- <li> FRANGO A MILANESA </li> -->
+              <!-- <li> FRANGO ASSADO </li> -->
+              <!-- <li> FRANGO DESFIADO </li> -->
+              <!-- <li> FRANGO FRITO </li> -->
+              <!-- <li> FRANGO GUISADO </li> -->
+              <!-- <li> GUISADO DE CARNE </li> -->
+              <!-- <li> ISCA DE CALABRESA </li> -->
+              <!-- <li> ISCA DE CARNE </li> -->
+              <!-- <li> ISCA DE FIGADO </li> -->
+              <li> ISCA DE FRANGO </li>
+              <!-- <li> LASANHA DE CARNE </li> -->
+              <!-- <li> LINGUIÇA DE FRANGO </li> -->
+              <!-- <li> OVO FRITO </li> -->
+              <!-- <li> PANQUECAS DE CARNE </li> -->
+              <!-- <li> PEIXE FRITO </li> -->
+              <!-- <li> PICADINHO RICO </li> -->
+              <!-- <li> PEITO DE FRANCO </li> -->
               <!-- <li> REFRIGERANTE </li> -->
               <!-- <li> TAMBAQUI FRITO </li> -->
 
@@ -535,13 +540,13 @@
             <p>
             <P class="desjejum">LANCHE:</P>
             <ul>
-              <!-- <li> BAQUETE </li> -->
+              <li> BAQUETE </li>
               <!-- <li> BISCOITO </li> -->
               <!-- <li> BISCOITO RECHEADO </li> -->
               <!-- <li> BOLACHA / IOGURTE </li> -->
               <!-- <li> BOLO </li> -->
               <!-- <li> FAROFA DE CHARQUE </li> -->
-              <li> KIKÃO </li>
+              <!-- <li> KIKÃO </li> -->
               <!-- <li> MISTO QUENTE </li> -->
               <!-- <li> PÃO COM OVO E QUEIJO </li> -->
               <!-- <li> PASTEL </li> -->
@@ -569,11 +574,11 @@
               <li> PÃO MASSA FINA </li>
               <li> CAFÉ / LEITE </li>
               <!-- <li> BANANA COZIDA </li> -->
-              <!-- <li> BOLO </li> -->
+              <li> BOLO </li>
               <!-- <li> FRUTA </li> -->
               <!-- <li> MOLHO DE SALSICHA </li> -->
               <!-- <li> OVO COZIDO </li> -->
-              <li> OVO FRITO </li>
+              <!-- <li> OVO FRITO </li> -->
               <!-- <li> PATÊ </li> -->
               <!-- <li> PUPUNHA </li> -->
               <!-- <li> QUARENTÃO </li> -->
@@ -598,11 +603,11 @@
               <!-- <li> FRANGO A MILANESA </li> -->
               <!-- <li> FRANGO ASSADO </li> -->
               <!-- <li> FRANGO DESFIADO </li> -->
-              <li> FRANGO FRITO </li>
-              <!-- <li> FRANGO GUISADO </li> -->
+              <!-- <li> FRANGO FRITO </li> -->
+              <li> FRANGO GUISADO </li>
               <!-- <li> GUISADO DE CARNE </li> -->
               <!-- <li> ISCA DE CALABRESA </li> -->
-              <li> ISCA DE CARNE </li>
+              <!-- <li> ISCA DE CARNE </li> -->
               <!-- <li> ISCA DE FIGADO </li> -->
               <!-- <li> ISCA DE FRANGO </li> -->
               <!-- <li> LASANHA DE CARNE </li> -->
@@ -610,7 +615,7 @@
               <!-- <li> OVO FRITO </li> -->
               <!-- <li> PANQUECAS DE CARNE </li> -->
               <!-- <li> PEIXE FRITO </li> -->
-              <!-- <li> PICADINHO RICO </li> -->
+              <li> PICADINHO RICO </li>
               <!-- <li> REFRIGERANTE </li> -->
               <!-- <li> TAMBAQUI FRITO </li> -->
 
@@ -622,14 +627,14 @@
             <P class="desjejum">LANCHE:</P>
             <ul>
               <!-- <li> BAQUETE </li> -->
-              <!-- <li> BISCOITO </li> -->
+              <li> BISCOITO </li>
               <!-- <li> BISCOITO RECHEADO </li> -->
               <!-- <li> BOLACHA / IOGURTE </li> -->
               <!-- <li> BOLO </li> -->
               <!-- <li> FAROFA DE CHARQUE </li> -->
               <!-- <li> KIKÃO </li> -->
               <!-- <li> MISTO QUENTE </li> -->
-              <li> PÃO COM OVO E QUEIJO </li>
+              <!-- <li> PÃO COM OVO E QUEIJO </li> -->
               <!-- <li> PASTEL </li> -->
               <!-- <li> PIT STOP / IOGURTE </li> -->
               <!-- <li> SALGADO </li> -->
