--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </a>
             <h3>
               <a class="Proficional_Academico" target="_blank" href="#services">
-                06/02
+                13/02
               </a>
             </h3>
             <p>
@@ -55,16 +55,18 @@
             <ul>
               <!-- <li> ALMOÇO ESPECIAL </li> -->
               <!-- <li> ASSADO DE PANELA </li> -->
-              <li> BIFE ACEBOLADO </li>
+              <!-- <li> BIFE ACEBOLADO </li> -->
               <!-- <li> BIFE AO MOLHO </li> -->
               <!-- <li> CARNE AO MOLHO </li> -->
+              <li> CARNE GUISADA </li>
               <!-- <li> CALABRESA E OVO </li> -->
               <!-- <li> CALABRESA E ACEBOLADA </li> -->
               <!-- <li> DOBRADINHA </li> -->
               <!-- <li> ESCONDIDINHO DE FRIOS </li> -->
               <!-- <li> FAROFA DE CONSERVA </li> -->
-              <li> FAROFA DE CHARQUE </li>
+              <!-- <li> FAROFA DE CHARQUE </li> -->
               <!-- <li> FEIJOADA </li> -->
+              <li> FILE DE FRANGO </li>
               <!-- <li> FILE DE FRANGO FRITO </li> -->
               <!-- <li> FRANGO A MILANESA </li> -->
               <!-- <li> FRANGO ASSADO </li> -->
@@ -96,14 +98,14 @@
               <!-- <li> BISCOITO </li> -->
               <!-- <li> BISCOITO RECHEADO </li> -->
               <!-- <li> BOLACHA / IOGURTE </li> -->
-              <!-- <li> BOLO </li> -->
+              <li> BOLO </li>
               <!-- <li> FAROFA DE CHARQUE </li> -->
               <!-- <li> KIKÃO </li> -->
               <!-- <li> MISTO QUENTE </li> -->
               <!-- <li> PÃO COM OVO E QUEIJO </li> -->
               <!-- <li> PASTEL </li> -->
               <!-- <li> PIT STOP / IOGURTE </li> -->
-              <li> SALGADO </li>
+              <!-- <li> SALGADO </li> -->
               <!-- <li> X SALADA </li> -->
 
               <!-- <li> AÇAÍ COM FARINHA DE TAPIOCA </li> -->
@@ -118,7 +120,7 @@
             </a>
             <h3>
               <a class="Proficional_Academico" target="_blank" href="#services">
-                07/02
+                14/02
               </a>
             </h3>
             <p>
@@ -131,11 +133,11 @@
               <!-- <li> BOLO </li> -->
               <!-- <li> FRUTA </li> -->
               <!-- <li> MOLHO DE SALSICHA </li> -->
-              <li> OVO COZIDO </li>
+              <!-- <li> OVO COZIDO </li> -->
               <!-- <li> OVO FRITO </li> -->
               <!-- <li> PATÊ </li> -->
               <!-- <li> PUPUNHA </li> -->
-              <!-- <li> QUARENTÃO </li> -->
+              <li> QUARENTÃO </li>
               <!-- <li> QUEIJO E PRESUNTO </li> -->
               <!-- <li> SOPA DE FEIJÃO </li> -->
               <!-- <li> TAPIOCA COM QUEIJO </li> -->
@@ -159,7 +161,7 @@
               <!-- <li> FRANGO ASSADO </li> -->
               <!-- <li> FRANGO DESFIADO </li> -->
               <!-- <li> FRANGO FRITO </li> -->
-              <li> FRANGO GUISADO </li>
+              <!-- <li> FRANGO GUISADO </li> -->
               <!-- <li> GUISADO DE CARNE </li> -->
               <!-- <li> ISCA DE CALABRESA </li> -->
               <!-- <li> ISCA DE CARNE </li> -->
@@ -170,7 +172,9 @@
               <!-- <li> OVO FRITO </li> -->
               <!-- <li> PANQUECAS DE CARNE </li> -->
               <!-- <li> PEIXE FRITO </li> -->
-              <li> PICADINHO RICO </li>
+              <li> PICADINHO </li>
+              <li> PIRARUCU FRITO </li>
+              <!-- <li> PICADINHO RICO </li> -->
               <!-- <li> REFRIGERANTE </li> -->
               <!-- <li> TAMBAQUI FRITO </li> -->
 
@@ -181,7 +185,7 @@
             <p>
             <P class="desjejum">LANCHE:</P>
             <ul>
-              <li> AÇAÍ COM FARINHA DE TAPIOCA </li>
+              <!-- <li> AÇAÍ COM FARINHA DE TAPIOCA </li> -->
               <!-- <li> BAQUETE </li> -->
               <!-- <li> BISCOITO </li> -->
               <!-- <li> BISCOITO RECHEADO </li> -->
@@ -194,7 +198,7 @@
               <!-- <li> PASTEL </li> -->
               <!-- <li> PIT STOP / IOGURTE </li> -->
               <!-- <li> SALGADO </li> -->
-              <!-- <li> MINGAU DE MUNGUNZÁ </li> -->
+              <li> MINGAU DE MUNGUNZÁ </li>
               <!-- <li> X SALADA </li> -->
             </ul>
             </p>
@@ -206,7 +210,7 @@
             </a>
             <h3>
               <a class="Proficional_Academico" target="_blank" href="#services">
-                08/02
+                15/02
               </a>
             </h3>
             <p>
@@ -218,10 +222,10 @@
               <!-- <li> BANANA COZIDA </li> -->
               <!-- <li> BOLO </li> -->
               <!-- <li> FRUTA </li> -->
-              <li> FAROFA DE CONSERVA </li>
+              <!-- <li> FAROFA DE CONSERVA </li> -->
               <!-- <li> MOLHO DE SALSICHA </li> -->
               <!-- <li> OVO COZIDO </li> -->
-              <!-- <li> OVO FRITO </li> -->
+              <li> OVO FRITO </li>
               <!-- <li> PATÊ </li> -->
               <!-- <li> PUPUNHA </li> -->
               <!-- <li> QUARENTÃO </li> -->
@@ -234,11 +238,11 @@
             <P class="desjejum">ALMOÇO:</P>
             <ul>
               <!-- <li> ALMOÇO ESPECIAL </li> -->
-              <!-- <li> BIFE ACEBOLADO </li> -->
+              <li> BIFE ACEBOLADO </li>
               <!-- <li> BIFE AO MOLHO </li> -->
               <!-- <li> BISTECA SUÍNA </li> -->
-              <li> CARNE AO MOLHO </li>
-              <!-- <li> CALABRESA E OVO </li> -->
+              <!-- <li> CARNE AO MOLHO </li> -->
+              <li> CALABRESA E OVO </li>
               <!-- <li> DOBRADINHA </li> -->
               <!-- <li> ESCONDIDINHO DE FRIOS </li> -->
               <!-- <li> FAROFA DE CONSERVA </li> -->
@@ -253,7 +257,7 @@
               <!-- <li> ISCA DE CALABRESA </li> -->
               <!-- <li> ISCA DE CARNE </li> -->
               <!-- <li> ISCA MISTA </li> -->
-              <li> ISCA DE FIGADO </li>
+              <!-- <li> ISCA DE FIGADO </li> -->
               <!-- <li> ISCA DE FRANGO </li> -->
               <!-- <li> LASANHA DE CARNE </li> -->
               <!-- <li> LINGUIÇA DE FRANGO </li> -->
@@ -284,9 +288,9 @@
               <!-- <li> PÃO COM OVO E QUEIJO </li> -->
               <!-- <li> PASTEL </li> -->
               <!-- <li> PIT STOP / IOGURTE </li> -->
-              <!-- <li> SALGADO </li> -->
+              <li> SALGADO </li>
               <!-- <li> X SALADA </li> -->
-              <li> X BURGUER </li>
+              <!-- <li> X BURGUER </li> -->
               <!-- <li>SALADA FRUTA</li> -->
             </ul>
             </p>
@@ -298,7 +302,7 @@
             </a>
             <h3>
               <a class="Proficional_Academico" target="_blank" href="#services">
-                09/02
+                16/02
               </a>
             </h3>
             <p>
@@ -309,7 +313,7 @@
               <li> CAFÉ / LEITE </li>
               <!-- <li> BANANA COZIDA </li> -->
               <!-- <li> BOLO </li> -->
-              <li> FRUTA </li>
+              <li> FRUTAS </li>
               <!-- <li> MOLHO DE SALSICHA </li> -->
               <!-- <li> OVO COZIDO </li> -->
               <!-- <li> OVO FRITO </li> -->
@@ -338,18 +342,19 @@
               <!-- <li> FEIJOADA </li> -->
               <!-- <li> FILE DE FRANGO FRITO </li> -->
               <!-- <li> FRANGO A MILANESA </li> -->
-              <li> FRANGO ASSADO </li>
+              <!-- <li> FRANGO ASSADO </li> -->
               <!-- <li> FRANGO DESFIADO </li> -->
               <!-- <li> FRANGO FRITO </li> -->
-              <!-- <li> FRANGO GUISADO </li> -->
+              <li> FRANGO GUISADO </li>
               <!-- <li> GUISADO DE CARNE </li> -->
-              <li> GUISADINHO SUÍNO </li>
+              <!-- <li> GUISADINHO SUÍNO </li> -->
               <!-- <li> ISCA DE CALABRESA </li> -->
               <!-- <li> ISCA DE CARNE </li> -->
               <!-- <li> ISCA DE FIGADO </li> -->
               <!-- <li> ISCA DE FRANGO </li> -->
               <!-- <li> LASANHA DE CARNE </li> -->
               <!-- <li> LINGUIÇA DE FRANGO </li> -->
+              <li> LINGUA AO MOLHO </li>
               <!-- <li> OVO FRITO </li> -->
               <!-- <li> PANQUECAS DE CARNE </li> -->
               <!-- <li> PEIXE FRITO </li> -->
@@ -373,9 +378,9 @@
               <!-- <li> BOLO </li> -->
               <!-- <li> FAROFA DE CHARQUE </li> -->
               <!-- <li> KIKÃO </li> -->
-              <!-- <li> MISTO QUENTE </li> -->
+              <li> MISTO QUENTE </li>
               <!-- <li> MINGAU DE MILHO </li> -->
-              <li> MINGAU </li>
+              <!-- <li> MINGAU </li> -->
               <!-- <li> PÃO COM OVO E QUEIJO </li> -->
               <!-- <li> PASTEL </li> -->
               <!-- <li> PIT STOP / IOGURTE </li> -->
@@ -391,7 +396,7 @@
             </a>
             <h3>
               <a class="Proficional_Academico" target="_blank" href="#services">
-                10/02
+                17/02
               </a>
             </h3>
             <p>
@@ -426,6 +431,7 @@
               <!-- <li> BIFE AO MOLHO </li> -->
               <!-- <li> CARNE AO MOLHO </li> -->
               <!-- <li> CALABRESA E OVO </li> -->
+              <li> COSTELA AO MOLHO </li>
               <!-- <li> DOBRADINHA </li> -->
               <!-- <li> ESCONDIDINHO DE FRIOS </li> -->
               <!-- <li> FAROFA DE CONSERVA </li> -->
@@ -438,16 +444,17 @@
               <!-- <li> FRANGO GUISADO </li> -->
               <!-- <li> GUISADO DE CARNE </li> -->
               <!-- <li> ISCA DE CALABRESA </li> -->
-              <li> ISCA DE CARNE </li>
+              <!-- <li> ISCA DE CARNE </li> -->
               <!-- <li> ISCA DE FIGADO </li> -->
               <!-- <li> ISCA DE FRANGO </li> -->
+              <li> LASANHA </li>
               <!-- <li> LASANHA DE CARNE </li> -->
               <!-- <li> LINGUIÇA DE FRANGO </li> -->
               <!-- <li> OVO FRITO </li> -->
               <!-- <li> PANQUECAS DE CARNE </li> -->
               <!-- <li> PEIXE FRITO </li> -->
               <!-- <li> PICADINHO RICO </li> -->
-              <li> PIRARUCU A CASACA </li>
+              <!-- <li> PIRARUCU A CASACA </li> -->
               <!-- <li> YAKISOBA </li> -->
               <!-- <li> TAMBAQUI FRITO </li> -->
 
@@ -481,7 +488,7 @@
             </a>
             <h3>
               <a class="Proficional_Academico" target="_blank" href="#services">
-                11/02
+                18/02
               </a>
             </h3>
             <p>
@@ -511,7 +518,7 @@
             <ul>
               <!-- <li> ALMOÇO ESPECIAL </li> -->
               <!-- <li> BIFE ACEBOLADO </li> -->
-              <li> BIFE AO MOLHO </li>
+              <!-- <li> BIFE AO MOLHO </li> -->
               <!-- <li> CARNE AO MOLHO </li> -->
               <!-- <li> CALABRESA E OVO </li> -->
               <!-- <li> DOBRADINHA </li> -->
@@ -519,6 +526,7 @@
               <!-- <li> FAROFA DE CONSERVA </li> -->
               <!-- <li> FEIJOADA </li> -->
               <!-- <li> FILE DE FRANGO FRITO </li> -->
+              <li> FILE DE FRANGO AO MOLHO </li>
               <!-- <li> FRANGO A MILANESA </li> -->
               <!-- <li> FRANGO ASSADO </li> -->
               <!-- <li> FRANGO DESFIADO </li> -->
@@ -526,12 +534,13 @@
               <!-- <li> FRANGO GUISADO </li> -->
               <!-- <li> GUISADO DE CARNE </li> -->
               <!-- <li> ISCA DE CALABRESA </li> -->
-              <li> ISCA DE CARNE </li>
+              <!-- <li> ISCA DE CARNE </li> -->
               <!-- <li> ISCA DE FIGADO </li> -->
               <!-- <li> ISCA DE FRANGO </li> -->
               <!-- <li> LASANHA DE CARNE </li> -->
               <!-- <li> LINGUIÇA DE FRANGO </li> -->
               <!-- <li> OVO FRITO </li> -->
+              <li> PANQUECAS </li>
               <!-- <li> PANQUECAS DE CARNE </li> -->
               <!-- <li> PEIXE FRITO </li> -->
               <!-- <li> PICADINHO RICO </li> -->
@@ -546,7 +555,7 @@
             <p>
             <P class="desjejum">LANCHE:</P>
             <ul>
-              <li> ABACATADA COM BOLACHA </li>
+              <!-- <li> ABACATADA COM BOLACHA </li> -->
               <!-- <li> BAQUETE </li> -->
               <!-- <li> BISCOITO </li> -->
               <!-- <li> BISCOITO RECHEADO </li> -->
@@ -560,6 +569,7 @@
               <!-- <li> PIT STOP / IOGURTE </li> -->
               <!-- <li> SALGADO </li> -->
               <!-- <li> X SALADA </li> -->
+              <li> VITAMINADA </li>
             </ul>
             </p>
           </div>
@@ -571,7 +581,7 @@
 
             <h3>
               <a class="Proficional_Academico" target="_blank" href="#services">
-                12/02
+                19/02
               </a>
             </h3>
             <p>
@@ -599,7 +609,7 @@
             <P class="desjejum">ALMOÇO:</P>
             <ul>
               <!-- <li> ALMOÇO ESPECIAL </li> -->
-              <!-- <li> BIFE ACEBOLADO </li> -->
+              <li> BIFE ACEBOLADO </li>
               <!-- <li> BIFE AO MOLHO </li> -->
               <!-- <li> CARNE AO MOLHO </li> -->
               <!-- <li> CALABRESA E OVO </li> -->
@@ -611,7 +621,7 @@
               <!-- <li> FRANGO A MILANESA </li> -->
               <!-- <li> FRANGO ASSADO </li> -->
               <!-- <li> FRANGO DESFIADO </li> -->
-              <li> FRANGO FRITO </li>
+              <!-- <li> FRANGO FRITO </li> -->
               <!-- <li> FRANGO GUISADO </li> -->
               <!-- <li> GUISADO DE CARNE </li> -->
               <!-- <li> ISCA DE CALABRESA </li> -->
